--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,27 +27,27 @@ services:
       - redis_data:/data
     cpus: 0.1
     mem_limit: 512m
-  # 3. Spring Boot App
-  server-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: springboot-app
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/local_test_database?serverTimezone=Asia/Seoul
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 1234
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
-      # 필요시 기타 Spring 환경변수...
-    depends_on:
-      - db
-      - redis
-    # CPU/메모리 제한 예시(선택)
-    cpus: 0.1
-    mem_limit: 512m
+#  # 3. Spring Boot App
+#  server-app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: springboot-app
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/local_test_database?serverTimezone=Asia/Seoul
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: 1234
+#      SPRING_REDIS_HOST: redis
+#      SPRING_REDIS_PORT: 6379
+#      # 필요시 기타 Spring 환경변수...
+#    depends_on:
+#      - db
+#      - redis
+#    # CPU/메모리 제한 예시(선택)
+#    cpus: 2
+#    mem_limit: 1024m
   # 4. Prometheus
   prometheus:
     image: prom/prometheus:latest
@@ -60,8 +60,8 @@ services:
     command:
       # config file 위치 지정 (기본값 /etc/prometheus/prometheus.yml)
       - "--config.file=/etc/prometheus/prometheus.yml"
-    depends_on:
-      - server-app
+#    depends_on:
+#      - server-app
     cpus: 1
     mem_limit: 512m
 
