--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: 'spring-boot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['server-app:8080']   # <서비스명:포트> 형식으로, Compose 네트워크 내 컨테이너 호스트명 사용
+      - targets: ['host.docker.internal:8080']   # <서비스명:포트> 형식으로, Compose 네트워크 내 컨테이너 호스트명 사용
