--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,23 @@ spring:
   application:
     name: local_test
   datasource:
-    url: jdbc:mysql://localhost:3307/local_test_database?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3308/local_test_database?serverTimezone=Asia/Seoul
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 
 server:
   port: 8080
