100만건 데이터의 조회 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: local_test
   datasource:
-    url: jdbc:mysql://localhost:3308/local_test_database?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3308/local_test_database?rewriteBatchedStatements=true&serverTimezone=Asia/Seoul
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
