1440 개 데이터 일반 인서트 VS 배치 인서트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     hibernate:
       ddl-auto: create
     properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
+#      hibernate:
+#        format_sql: true
+#        show_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
   data:
     redis:
